<resources>
    <string name="app_name">SoftSkills</string>
    <string name="menu_title_main">Главная</string>
    <string name="menu_title_personal">ЛК</string>
    <string name="menu_title_chat">Чат</string>
    <string name="menu_item_tracking">Трекинг</string>
    <string name="menu_item_psychologist">Психолог</string>
    <string name="career_test_btn_title">Тестирование на профориентацию</string>
    <string name="soft_skills_btn_title">Тестирование на Soft-skills</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_y_the_best">Присоединиться к YTheBest</string>
    <string name="enter">Войти</string>
    <string name="lk">Личный кабинет</string>
    <string name="email">Адрес электронной почты</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="re_password">Повторите пароль</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="chat">Чат</string>
    <string name="personal">ЛК</string>
    <string name="psychologist">Психолог</string>
    <string name="tracking">Трекинг</string>
    <string name="registration_btn_title">Регистрация</string>
    <string name="onboarding_skip_btn_title">Пропустить</string>
    <string name="main_selector_life_skills_btn_title">Нажми, чтобы узнать каких навыков тебе не хватает в жизни</string>
    <string name="main_selector_work_skills_btn_title">Нажми, чтобы узнать каких навыков тебе не хватает в работе</string>
    <string name="main_selector_tv_2_title">Предложение пройти тест</string>
    <string name="main_selector_tv_1_title">Мы поможем тебе стать лучшей версией себя</string>
    <string name="main_selector_congratulations_tv_title">Поздравляем с регистрацией!</string>
    <string name="profession_selector_tv_header_1_title">Ты решил прокачать свои soft skills в профессии</string>
    <string name="professional_selector_tv_header_2_title">Выбери свою профессию</string>
    <string name="life_skills_selector_tv_header_1_title">Ты решил прокачать свои life skills</string>
    <string name="life_skills_selector_tv_header_2_title">Выбери навык</string>
    <string name="soft_skills_description_header1">Ты решил прокачать свой Soft Skills</string>
    <string name="fragment_description_header2">Вид теста</string>
    <string name="description_start_btn_title">Начать тест</string>
    <string name="fragment_description_header3_title">Описание теста</string>
</resources>