<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/main_selector_congratulations_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_selector_layout_margin"
        android:gravity="center"
        android:text="@string/main_selector_congratulations_tv_title"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_selector_tv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_selector_layout_margin"
        android:gravity="center"
        android:text="@string/main_selector_tv_1_title"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_selector_congratulations_tv" />

    <TextView
        android:id="@+id/main_selector_tv_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_selector_layout_margin"
        android:gravity="center"
        android:text="@string/main_selector_tv_2_title"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toTopOf="@+id/main_selector_life_skills_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_selector_work_skills_btn"
        android:layout_width="@dimen/main_selector_skills_btn_width"
        android:layout_height="@dimen/main_selector_skills_btn_height"
        android:layout_marginStart="@dimen/main_selector_layout_margin"
        android:layout_marginEnd="@dimen/main_selector_layout_margin"
        android:text="@string/main_selector_work_skills_btn_title"
        app:layout_constraintBottom_toBottomOf="@+id/main_selector_life_skills_btn"
        app:layout_constraintEnd_toStartOf="@+id/main_selector_life_skills_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_selector_life_skills_btn" />

    <Button
        android:id="@+id/main_selector_life_skills_btn"
        android:layout_width="@dimen/main_selector_skills_btn_width"
        android:layout_height="@dimen/main_selector_skills_btn_height"
        android:layout_marginEnd="@dimen/main_selector_layout_margin"
        android:layout_marginBottom="@dimen/main_selector_layout_margin"
        android:text="@string/main_selector_life_skills_btn_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_selector_work_skills_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>